[package]
name = "bongo_cat_coin"
version = "0.1.0"
authors = ["Q Misell <q@misell.cymru>"]

[dependencies]
rust-crypto = "~0.2"
chrono = "~0.4"
iron = "~0.4"
serde = "~1.0"
serde_json = "~1.0"
serde_derive = "~1.0"
erased-serde = "~0.3"
juniper = "~0.10"
juniper_warp = "~0.1"
warp = "~0.1"
hex = "~0.3"
quick-protobuf = "~0.6"
regex = "1"